Team-5_Assignment-6/.antlr/ExprParser.java
// Generated from /home/nguyen/Desktop/C++/CMPE-152/Team-5_Assignment-7/Expr.g4 by ANTLR 4.9.2

    #include <map>
    #include "intermediate/symtab/Symtab.h"
    #include "intermediate/type/Typespec.h"
    using namespace intermediate::symtab;
    using namespace intermediate::type;

import org.antlr.v4.runtime.atn.*;
import org.antlr.v4.runtime.dfa.DFA;
import org.antlr.v4.runtime.*;
import org.antlr.v4.runtime.misc.*;
import org.antlr.v4.runtime.tree.*;
import java.util.List;
import java.util.Iterator;
import java.util.ArrayList;

@SuppressWarnings({"all", "warnings", "unchecked", "unused", "cast"})
public class ExprParser extends Parser {
	static { RuntimeMetaData.checkVersion("4.9.2", RuntimeMetaData.VERSION); }

	protected static final DFA[] _decisionToDFA;
	protected static final PredictionContextCache _sharedContextCache =
		new PredictionContextCache();
	public static final int
		PLUSOP=1, MINUSOP=2, MULTOP=3, DIVOP=4, EQUAL=5, LT=6, GT=7, CARAT=8, 
		COLON=9, COMMA=10, PERIOD=11, SEMICOLON=12, LPAREN=13, RPAREN=14, LBRACKET=15, 
		RBRACKET=16, LCOMMENT=17, RCOMMENT=18, LBRACE=19, RBRACE=20, ASSIGN=21, 
		PLUSEQUAL=22, MINUSEQUAL=23, DIVEQUAL=24, MULTEQUAL=25, NE=26, LTEQ=27, 
		GTEQ=28, DOTDOT=29, PROGRAM=30, CONST=31, TYPE=32, ARRAY=33, ASM=34, BREAK=35, 
		CONSTRUCTOR=36, CONTINUE=37, DESTRUCTOR=38, FALSE=39, FILE=40, GOTO=41, 
		IMPLEMENTATION=42, IN=43, INLINE=44, INTERFACE=45, LABEL=46, NIL=47, OBJECT=48, 
		ON=49, OPERATOR=50, PACKED=51, SET=52, SHL=53, SHR=54, UNIT=55, USES=56, 
		XOR=57, OF=58, RECORD=59, VAR=60, BEGIN=61, END=62, DIV=63, MOD=64, AND=65, 
		OR=66, NOT=67, IF=68, THEN=69, ELSE=70, CASE=71, REPEAT=72, UNTIL=73, 
		WHILE=74, DO=75, FOR=76, TO=77, DOWNTO=78, WRITE=79, WRITELN=80, READ=81, 
		READLN=82, PROCEDURE=83, FUNCTION=84, IDENTIFIER=85, INTEGER=86, REAL=87, 
		NEWLINE=88, WS=89, QUOTE=90, CHARACTER=91, STRING=92, COMMENT=93;
	public static final int
		RULE_program = 0, RULE_program_header = 1, RULE_program_name = 2, RULE_program_body = 3, 
		RULE_program_declaration = 4, RULE_constants_section = 5, RULE_constant_list = 6, 
		RULE_constant_definition = 7, RULE_constant_name = 8, RULE_constant = 9, 
		RULE_types_section = 10, RULE_type_declaration_list = 11, RULE_type_declaration = 12, 
		RULE_type_identifier = 13, RULE_data_type = 14, RULE_simple_type = 15, 
		RULE_variable_section = 16, RULE_variable_declaration_list = 17, RULE_variable_declaration = 18, 
		RULE_variable_name_list = 19, RULE_variable_name = 20, RULE_subrange_type = 21, 
		RULE_array_type = 22, RULE_array_declaration = 23, RULE_routine_section = 24, 
		RULE_routine_declaration = 25, RULE_procedure = 26, RULE_function = 27, 
		RULE_routine_name = 28, RULE_parameters = 29, RULE_parameter_list = 30, 
		RULE_parameter_declaration = 31, RULE_parameter_name_list = 32, RULE_parameter_name = 33, 
		RULE_statement = 34, RULE_compound_statement = 35, RULE_statement_list = 36, 
		RULE_assign_statement = 37, RULE_lhs = 38, RULE_rhs = 39, RULE_if_statement = 40, 
		RULE_true_statement = 41, RULE_false_statement = 42, RULE_case_statement = 43, 
		RULE_case_branch_list = 44, RULE_case_branch = 45, RULE_case_constant_list = 46, 
		RULE_case_constant = 47, RULE_repeat_statement = 48, RULE_while_statement = 49, 
		RULE_for_statement = 50, RULE_procedure_call = 51, RULE_procedure_name = 52, 
		RULE_function_call = 53, RULE_function_name = 54, RULE_argument_list = 55, 
		RULE_argument = 56, RULE_write_statement = 57, RULE_writeln_statement = 58, 
		RULE_write_argument_list = 59, RULE_write_argument = 60, RULE_width = 61, 
		RULE_decimal_place = 62, RULE_expression = 63, RULE_simpleExpression = 64, 
		RULE_term = 65, RULE_factor = 66, RULE_variable = 67, RULE_modifier = 68, 
		RULE_index_list = 69, RULE_index = 70, RULE_field = 71, RULE_number = 72, 
		RULE_unsigned_number = 73, RULE_integer_constant = 74, RULE_real_constant = 75, 
		RULE_character_constant = 76, RULE_string_constant = 77, RULE_sign = 78, 
		RULE_relational_operator = 79, RULE_expression_operator = 80, RULE_term_operator = 81;
	private static String[] makeRuleNames() {
		return new String[] {
			"program", "program_header", "program_name", "program_body", "program_declaration", 
			"constants_section", "constant_list", "constant_definition", "constant_name", 
			"constant", "types_section", "type_declaration_list", "type_declaration", 
			"type_identifier", "data_type", "simple_type", "variable_section", "variable_declaration_list", 
			"variable_declaration", "variable_name_list", "variable_name", "subrange_type", 
			"array_type", "array_declaration", "routine_section", "routine_declaration", 
			"procedure", "function", "routine_name", "parameters", "parameter_list", 
			"parameter_declaration", "parameter_name_list", "parameter_name", "statement", 
			"compound_statement", "statement_list", "assign_statement", "lhs", "rhs", 
			"if_statement", "true_statement", "false_statement", "case_statement", 
			"case_branch_list", "case_branch", "case_constant_list", "case_constant", 
			"repeat_statement", "while_statement", "for_statement", "procedure_call", 
			"procedure_name", "function_call", "function_name", "argument_list", 
			"argument", "write_statement", "writeln_statement", "write_argument_list", 
			"write_argument", "width", "decimal_place", "expression", "simpleExpression", 
			"term", "factor", "variable", "modifier", "index_list", "index", "field", 
			"number", "unsigned_number", "integer_constant", "real_constant", "character_constant", 
			"string_constant", "sign", "relational_operator", "expression_operator", 
			"term_operator"
		};
	}
	public static final String[] ruleNames = makeRuleNames();

	private static String[] makeLiteralNames() {
		return new String[] {
			null, "'+'", "'-'", "'*'", "'/'", "'='", "'<'", "'>'", "'^'", "':'", 
			"','", "'.'", "';'", "'('", "')'", "'['", "']'", "'(*'", "'*)'", "'{'", 
			"'}'", "':='", "'+='", "'-='", "'/='", "'*='", "'<>'", "'<='", "'>='", 
			"'..'", null, null, null, null, null, null, null, null, null, null, null, 
			null, null, null, null, null, null, null, null, null, null, null, null, 
			null, null, null, null, null, null, null, null, null, null, null, null, 
			null, null, null, null, null, null, null, null, null, null, null, null, 
			null, null, null, null, null, null, null, null, null, null, null, null, 
			null, "'''"
		};
	}
	private static final String[] _LITERAL_NAMES = makeLiteralNames();
	private static String[] makeSymbolicNames() {
		return new String[] {
			null, "PLUSOP", "MINUSOP", "MULTOP", "DIVOP", "EQUAL", "LT", "GT", "CARAT", 
			"COLON", "COMMA", "PERIOD", "SEMICOLON", "LPAREN", "RPAREN", "LBRACKET", 
			"RBRACKET", "LCOMMENT", "RCOMMENT", "LBRACE", "RBRACE", "ASSIGN", "PLUSEQUAL", 
			"MINUSEQUAL", "DIVEQUAL", "MULTEQUAL", "NE", "LTEQ", "GTEQ", "DOTDOT", 
			"PROGRAM", "CONST", "TYPE", "ARRAY", "ASM", "BREAK", "CONSTRUCTOR", "CONTINUE", 
			"DESTRUCTOR", "FALSE", "FILE", "GOTO", "IMPLEMENTATION", "IN", "INLINE", 
			"INTERFACE", "LABEL", "NIL", "OBJECT", "ON", "OPERATOR", "PACKED", "SET", 
			"SHL", "SHR", "UNIT", "USES", "XOR", "OF", "RECORD", "VAR", "BEGIN", 
			"END", "DIV", "MOD", "AND", "OR", "NOT", "IF", "THEN", "ELSE", "CASE", 
			"REPEAT", "UNTIL", "WHILE", "DO", "FOR", "TO", "DOWNTO", "WRITE", "WRITELN", 
			"READ", "READLN", "PROCEDURE", "FUNCTION", "IDENTIFIER", "INTEGER", "REAL", 
			"NEWLINE", "WS", "QUOTE", "CHARACTER", "STRING", "COMMENT"
		};
	}
	private static final String[] _SYMBOLIC_NAMES = makeSymbolicNames();
	public static final Vocabulary VOCABULARY = new VocabularyImpl(_LITERAL_NAMES, _SYMBOLIC_NAMES);

	/**
	 * @deprecated Use {@link #VOCABULARY} instead.
	 */
	@Deprecated
	public static final String[] tokenNames;
	static {
		tokenNames = new String[_SYMBOLIC_NAMES.length];
		for (int i = 0; i < tokenNames.length; i++) {
			tokenNames[i] = VOCABULARY.getLiteralName(i);
			if (tokenNames[i] == null) {
				tokenNames[i] = VOCABULARY.getSymbolicName(i);
			}

			if (tokenNames[i] == null) {
				tokenNames[i] = "<INVALID>";
			}
		}
	}

	@Override
	@Deprecated
	public String[] getTokenNames() {
		return tokenNames;
	}

	@Override

	public Vocabulary getVocabulary() {
		return VOCABULARY;
	}

	@Override
	public String getGrammarFileName() { return "Expr.g4"; }

	@Override
	public String[] getRuleNames() { return ruleNames; }

	@Override
	public String getSerializedATN() { return _serializedATN; }

	@Override
	public ATN getATN() { return _ATN; }

	public ExprParser(TokenStream input) {
		super(input);
		_interp = new ParserATNSimulator(this,_ATN,_decisionToDFA,_sharedContextCache);
	}

	public static class ProgramContext extends ParserRuleContext {
		public Program_headerContext program_header() {
			return getRuleContext(Program_headerContext.class,0);
		}
		public Program_bodyContext program_body() {
			return getRuleContext(Program_bodyContext.class,0);
		}
		public TerminalNode PERIOD() { return getToken(ExprParser.PERIOD, 0); }
		public ProgramContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_program; }
	}

	public final ProgramContext program() throws RecognitionException {
		ProgramContext _localctx = new ProgramContext(_ctx, getState());
		enterRule(_localctx, 0, RULE_program);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(164);
			program_header();
			setState(165);
			program_body();
			setState(166);
			match(PERIOD);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class Program_headerContext extends ParserRuleContext {
		public TerminalNode PROGRAM() { return getToken(ExprParser.PROGRAM, 0); }
		public Program_nameContext program_name() {
			return getRuleContext(Program_nameContext.class,0);
		}
		public TerminalNode SEMICOLON() { return getToken(ExprParser.SEMICOLON, 0); }
		public Program_headerContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_program_header; }
	}

	public final Program_headerContext program_header() throws RecognitionException {
		Program_headerContext _localctx = new Program_headerContext(_ctx, getState());
		enterRule(_localctx, 2, RULE_program_header);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(168);
			match(PROGRAM);
			setState(169);
			program_name();
			setState(170);
			match(SEMICOLON);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class Program_nameContext extends ParserRuleContext {
		public SymtabEntry * entry = nullptr;
		public TerminalNode IDENTIFIER() { return getToken(ExprParser.IDENTIFIER, 0); }
		public Program_nameContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_program_name; }
	}

	public final Program_nameContext program_name() throws RecognitionException {
		Program_nameContext _localctx = new Program_nameContext(_ctx, getState());
		enterRule(_localctx, 4, RULE_program_name);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(172);
			match(IDENTIFIER);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class Program_bodyContext extends ParserRuleContext {
		public Program_declarationContext program_declaration() {
			return getRuleContext(Program_declarationContext.class,0);
		}
		public Compound_statementContext compound_statement() {
			return getRuleContext(Compound_statementContext.class,0);
		}
		public Program_bodyContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_program_body; }
	}

	public final Program_bodyContext program_body() throws RecognitionException {
		Program_bodyContext _localctx = new Program_bodyContext(_ctx, getState());
		enterRule(_localctx, 6, RULE_program_body);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(174);
			program_declaration();
			setState(175);
			compound_statement();
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class Program_declarationContext extends ParserRuleContext {
		public Constants_sectionContext constants_section() {
			return getRuleContext(Constants_sectionContext.class,0);
		}
		public List<TerminalNode> SEMICOLON() { return getTokens(ExprParser.SEMICOLON); }
		public TerminalNode SEMICOLON(int i) {
			return getToken(ExprParser.SEMICOLON, i);
		}
		public Types_sectionContext types_section() {
			return getRuleContext(Types_sectionContext.class,0);
		}
		public Variable_sectionContext variable_section() {
			return getRuleContext(Variable_sectionContext.class,0);
		}
		public Routine_sectionContext routine_section() {
			return getRuleContext(Routine_sectionContext.class,0);
		}
		public Program_declarationContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_program_declaration; }
	}

	public final Program_declarationContext program_declaration() throws RecognitionException {
		Program_declarationContext _localctx = new Program_declarationContext(_ctx, getState());
		enterRule(_localctx, 8, RULE_program_declaration);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(180);
			_errHandler.sync(this);
			_la = _input.LA(1);
			if (_la==CONST) {
				{
				setState(177);
				constants_section();
				setState(178);
				match(SEMICOLON);
				}
			}

			setState(185);
			_errHandler.sync(this);
			_la = _input.LA(1);
			if (_la==TYPE) {
				{
				setState(182);
				types_section();
				setState(183);
				match(SEMICOLON);
				}
			}

			setState(190);
			_errHandler.sync(this);
			_la = _input.LA(1);
			if (_la==VAR) {
				{
				setState(187);
				variable_section();
				setState(188);
				match(SEMICOLON);
				}
			}

			setState(195);
			_errHandler.sync(this);
			_la = _input.LA(1);
			if (_la==PROCEDURE || _la==FUNCTION) {
				{
				setState(192);
				routine_section();
				setState(193);
				match(SEMICOLON);
				}
			}

			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class Constants_sectionContext extends ParserRuleContext {
		public TerminalNode CONST() { return getToken(ExprParser.CONST, 0); }
		public Constant_listContext constant_list() {
			return getRuleContext(Constant_listContext.class,0);
		}
		public Constants_sectionContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_constants_section; }
	}

	public final Constants_sectionContext constants_section() throws RecognitionException {
		Constants_sectionContext _localctx = new Constants_sectionContext(_ctx, getState());
		enterRule(_localctx, 10, RULE_constants_section);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(197);
			match(CONST);
			setState(198);
			constant_list();
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class Constant_listContext extends ParserRuleContext {
		public List<Constant_definitionContext> constant_definition() {
			return getRuleContexts(Constant_definitionContext.class);
		}
		public Constant_definitionContext constant_definition(int i) {
			return getRuleContext(Constant_definitionContext.class,i);
		}
		public List<TerminalNode> SEMICOLON() { return getTokens(ExprParser.SEMICOLON); }
		public TerminalNode SEMICOLON(int i) {
			return getToken(ExprParser.SEMICOLON, i);
		}
		public Constant_listContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_constant_list; }
	}

	public final Constant_listContext constant_list() throws RecognitionException {
		Constant_listContext _localctx = new Constant_listContext(_ctx, getState());
		enterRule(_localctx, 12, RULE_constant_list);
		try {
			int _alt;
			enterOuterAlt(_localctx, 1);
			{
			setState(200);
			constant_definition();
			setState(205);
			_errHandler.sync(this);
			_alt = getInterpreter().adaptivePredict(_input,4,_ctx);
			while ( _alt!=2 && _alt!=org.antlr.v4.runtime.atn.ATN.INVALID_ALT_NUMBER ) {
				if ( _alt==1 ) {
					{
					{
					setState(201);
					match(SEMICOLON);
					setState(202);
					constant_definition();
					}
					} 
				}
				setState(207);
				_errHandler.sync(this);
				_alt = getInterpreter().adaptivePredict(_input,4,_ctx);
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class Constant_definitionContext extends ParserRuleContext {
		public Constant_nameContext constant_name() {
			return getRuleContext(Constant_nameContext.class,0);
		}
		public TerminalNode EQUAL() { return getToken(ExprParser.EQUAL, 0); }
		public ConstantContext constant() {
			return getRuleContext(ConstantContext.class,0);
		}
		public Constant_definitionContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_constant_definition; }
	}

	public final Constant_definitionContext constant_definition() throws RecognitionException {
		Constant_definitionContext _localctx = new Constant_definitionContext(_ctx, getState());
		enterRule(_localctx, 14, RULE_constant_definition);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(208);
			constant_name();
			setState(209);
			match(EQUAL);
			setState(210);
			constant();
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class Constant_nameContext extends ParserRuleContext {
		public Typespec * type = nullptr;
		public SymtabEntry * entry = nullptr;
		public TerminalNode IDENTIFIER() { return getToken(ExprParser.IDENTIFIER, 0); }
		public Constant_nameContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_constant_name; }
	}

	public final Constant_nameContext constant_name() throws RecognitionException {
		Constant_nameContext _localctx = new Constant_nameContext(_ctx, getState());
		enterRule(_localctx, 16, RULE_constant_name);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(212);
			match(IDENTIFIER);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class ConstantContext extends ParserRuleContext {
		public Typespec * type = nullptr;
		public Object value = nullptr;
		public TerminalNode IDENTIFIER() { return getToken(ExprParser.IDENTIFIER, 0); }
		public Unsigned_numberContext unsigned_number() {
			return getRuleContext(Unsigned_numberContext.class,0);
		}
		public SignContext sign() {
			return getRuleContext(SignContext.class,0);
		}
		public Character_constantContext character_constant() {
			return getRuleContext(Character_constantContext.class,0);
		}
		public String_constantContext string_constant() {
			return getRuleContext(String_constantContext.class,0);
		}
		public ConstantContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_constant; }
	}
